// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Switch Basic 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    className="psds-switch psds-switch--label-align-right"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
    >
      <div
        className="psds-switch__track psds-theme--dark psds-switch__track--size-large"
      >
        <div
          className="psds-switch__thumb psds-switch__thumb--size-large"
        />
      </div>
    </div>
    <input
      aria-label="Switch label"
      checked={false}
      className="psds-switch__checkbox"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={true}
      tabIndex={0}
      type="checkbox"
    />
  </label>
</div>
`;

exports[`Storyshots Components/Switch Checked 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    className="psds-switch psds-switch--label-align-right"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
    >
      <div
        className="psds-switch__track psds-theme--dark psds-switch__track--size-large psds-switch__track--checked psds-switch__track--color-orange"
      >
        <div
          className="psds-switch__thumb psds-switch__thumb--size-large psds-switch__thumb--checked"
        />
      </div>
    </div>
    <input
      aria-label="Switch label"
      checked={true}
      className="psds-switch__checkbox"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={true}
      tabIndex={0}
      type="checkbox"
    />
  </label>
</div>
`;

exports[`Storyshots Components/Switch Checked Error 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    className="psds-switch psds-switch--label-align-right"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--error psds-halo--visible-on-focus"
    >
      <div
        className="psds-switch__track psds-theme--dark psds-switch__track--size-large psds-switch__track--checked psds-switch__track--color-orange"
      >
        <div
          className="psds-switch__thumb psds-switch__thumb--size-large psds-switch__thumb--checked"
        />
      </div>
    </div>
    <input
      aria-label="Switch label"
      checked={true}
      className="psds-switch__checkbox"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={true}
      tabIndex={0}
      type="checkbox"
    />
  </label>
</div>
`;

exports[`Storyshots Components/Switch Colors 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    style={
      Object {
        "display": "grid",
        "gap": "20px",
        "gridTemplateColumns": "1fr 1fr",
      }
    }
  >
    <label
      className="psds-switch psds-switch--label-align-right"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
      >
        <div
          className="psds-switch__track psds-theme--dark psds-switch__track--size-large psds-switch__track--checked psds-switch__track--color-blue"
        >
          <div
            className="psds-switch__thumb psds-switch__thumb--size-large psds-switch__thumb--checked"
          />
        </div>
      </div>
      <input
        aria-label="Switch label"
        checked={true}
        className="psds-switch__checkbox"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
      />
      <span
        className="psds-switch__label psds-switch__label--size-large psds-switch__label--label-align-right psds-theme--dark"
      >
        blue
      </span>
    </label>
    <label
      className="psds-switch psds-switch--label-align-right"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
      >
        <div
          className="psds-switch__track psds-theme--dark psds-switch__track--size-large psds-switch__track--checked psds-switch__track--color-green"
        >
          <div
            className="psds-switch__thumb psds-switch__thumb--size-large psds-switch__thumb--checked"
          />
        </div>
      </div>
      <input
        aria-label="Switch label"
        checked={true}
        className="psds-switch__checkbox"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
      />
      <span
        className="psds-switch__label psds-switch__label--size-large psds-switch__label--label-align-right psds-theme--dark"
      >
        green
      </span>
    </label>
    <label
      className="psds-switch psds-switch--label-align-right"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
      >
        <div
          className="psds-switch__track psds-theme--dark psds-switch__track--size-large psds-switch__track--checked psds-switch__track--color-orange"
        >
          <div
            className="psds-switch__thumb psds-switch__thumb--size-large psds-switch__thumb--checked"
          />
        </div>
      </div>
      <input
        aria-label="Switch label"
        checked={true}
        className="psds-switch__checkbox"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
      />
      <span
        className="psds-switch__label psds-switch__label--size-large psds-switch__label--label-align-right psds-theme--dark"
      >
        orange
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots Components/Switch Disabled 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    className="psds-switch psds-switch--label-align-right psds-switch--disabled"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
    >
      <div
        className="psds-switch__track psds-theme--dark psds-switch__track--size-large"
      >
        <div
          className="psds-switch__thumb psds-switch__thumb--size-large"
        />
      </div>
    </div>
    <input
      aria-label="Switch label"
      checked={false}
      className="psds-switch__checkbox"
      disabled={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={true}
      tabIndex={-1}
      type="checkbox"
    />
  </label>
</div>
`;

exports[`Storyshots Components/Switch Disabled Error 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    className="psds-switch psds-switch--label-align-right psds-switch--disabled"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--error psds-halo--visible-on-focus"
    >
      <div
        className="psds-switch__track psds-theme--dark psds-switch__track--size-large"
      >
        <div
          className="psds-switch__thumb psds-switch__thumb--size-large"
        />
      </div>
    </div>
    <input
      aria-label="Switch label"
      checked={false}
      className="psds-switch__checkbox"
      disabled={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={true}
      tabIndex={-1}
      type="checkbox"
    />
  </label>
</div>
`;

exports[`Storyshots Components/Switch Error 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    className="psds-switch psds-switch--label-align-right"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--error psds-halo--visible-on-focus"
    >
      <div
        className="psds-switch__track psds-theme--dark psds-switch__track--size-large"
      >
        <div
          className="psds-switch__thumb psds-switch__thumb--size-large"
        />
      </div>
    </div>
    <input
      aria-label="Switch label"
      checked={false}
      className="psds-switch__checkbox"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={true}
      tabIndex={0}
      type="checkbox"
    />
  </label>
</div>
`;

exports[`Storyshots Components/Switch Example State Demo 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    style={
      Object {
        "display": "grid",
        "gap": "20px",
        "gridTemplateColumns": "1fr 1fr",
      }
    }
  >
    <label
      className="psds-switch psds-switch--label-align-right"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
      >
        <div
          className="psds-switch__track psds-theme--dark psds-switch__track--size-large"
        >
          <div
            className="psds-switch__thumb psds-switch__thumb--size-large"
          />
        </div>
      </div>
      <input
        checked={false}
        className="psds-switch__checkbox"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
      />
      <span
        className="psds-switch__label psds-switch__label--size-large psds-switch__label--label-align-right psds-theme--dark"
      >
        blue
      </span>
    </label>
    <label
      className="psds-switch psds-switch--label-align-right"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
      >
        <div
          className="psds-switch__track psds-theme--dark psds-switch__track--size-large"
        >
          <div
            className="psds-switch__thumb psds-switch__thumb--size-large"
          />
        </div>
      </div>
      <input
        checked={false}
        className="psds-switch__checkbox"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
      />
      <span
        className="psds-switch__label psds-switch__label--size-large psds-switch__label--label-align-right psds-theme--dark"
      >
        green
      </span>
    </label>
    <label
      className="psds-switch psds-switch--label-align-right"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
      >
        <div
          className="psds-switch__track psds-theme--dark psds-switch__track--size-large"
        >
          <div
            className="psds-switch__thumb psds-switch__thumb--size-large"
          />
        </div>
      </div>
      <input
        checked={false}
        className="psds-switch__checkbox"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
      />
      <span
        className="psds-switch__label psds-switch__label--size-large psds-switch__label--label-align-right psds-theme--dark"
      >
        orange
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots Components/Switch Label Alignment 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    style={
      Object {
        "display": "grid",
        "gap": "20px",
        "gridTemplateColumns": "1fr 1fr",
      }
    }
  >
    <label
      className="psds-switch psds-switch--label-align-left"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
      >
        <div
          className="psds-switch__track psds-theme--dark psds-switch__track--size-small"
        >
          <div
            className="psds-switch__thumb psds-switch__thumb--size-small"
          />
        </div>
      </div>
      <input
        aria-label="Switch label"
        checked={false}
        className="psds-switch__checkbox"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
      />
      <span
        className="psds-switch__label psds-switch__label--size-small psds-switch__label--label-align-left psds-theme--dark"
      >
        small
        -
        left
      </span>
    </label>
    <label
      className="psds-switch psds-switch--label-align-right"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
      >
        <div
          className="psds-switch__track psds-theme--dark psds-switch__track--size-small"
        >
          <div
            className="psds-switch__thumb psds-switch__thumb--size-small"
          />
        </div>
      </div>
      <input
        aria-label="Switch label"
        checked={false}
        className="psds-switch__checkbox"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
      />
      <span
        className="psds-switch__label psds-switch__label--size-small psds-switch__label--label-align-right psds-theme--dark"
      >
        small
        -
        right
      </span>
    </label>
    <label
      className="psds-switch psds-switch--label-align-left"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
      >
        <div
          className="psds-switch__track psds-theme--dark psds-switch__track--size-large"
        >
          <div
            className="psds-switch__thumb psds-switch__thumb--size-large"
          />
        </div>
      </div>
      <input
        aria-label="Switch label"
        checked={false}
        className="psds-switch__checkbox"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
      />
      <span
        className="psds-switch__label psds-switch__label--size-large psds-switch__label--label-align-left psds-theme--dark"
      >
        large
        -
        left
      </span>
    </label>
    <label
      className="psds-switch psds-switch--label-align-right"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
      >
        <div
          className="psds-switch__track psds-theme--dark psds-switch__track--size-large"
        >
          <div
            className="psds-switch__thumb psds-switch__thumb--size-large"
          />
        </div>
      </div>
      <input
        aria-label="Switch label"
        checked={false}
        className="psds-switch__checkbox"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
      />
      <span
        className="psds-switch__label psds-switch__label--size-large psds-switch__label--label-align-right psds-theme--dark"
      >
        large
        -
        right
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots Components/Switch Named 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    className="psds-switch psds-switch--label-align-right"
  >
    <div
      className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
    >
      <div
        className="psds-switch__track psds-theme--dark psds-switch__track--size-large"
      >
        <div
          className="psds-switch__thumb psds-switch__thumb--size-large"
        />
      </div>
    </div>
    <input
      aria-label="Switch label"
      checked={false}
      className="psds-switch__checkbox"
      disabled={false}
      name="form-name-for-switch"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={true}
      tabIndex={0}
      type="checkbox"
    />
  </label>
</div>
`;

exports[`Storyshots Components/Switch Sizes 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    style={
      Object {
        "display": "grid",
        "gap": "20px",
        "gridTemplateColumns": "1fr 1fr",
      }
    }
  >
    <label
      className="psds-switch psds-switch--label-align-right"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
      >
        <div
          className="psds-switch__track psds-theme--dark psds-switch__track--size-small"
        >
          <div
            className="psds-switch__thumb psds-switch__thumb--size-small"
          />
        </div>
      </div>
      <input
        aria-label="Switch label"
        checked={false}
        className="psds-switch__checkbox"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
      />
      <span
        className="psds-switch__label psds-switch__label--size-small psds-switch__label--label-align-right psds-theme--dark"
      >
        small
      </span>
    </label>
    <label
      className="psds-switch psds-switch--label-align-right"
    >
      <div
        className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus"
      >
        <div
          className="psds-switch__track psds-theme--dark psds-switch__track--size-large"
        >
          <div
            className="psds-switch__thumb psds-switch__thumb--size-large"
          />
        </div>
      </div>
      <input
        aria-label="Switch label"
        checked={false}
        className="psds-switch__checkbox"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
      />
      <span
        className="psds-switch__label psds-switch__label--size-large psds-switch__label--label-align-right psds-theme--dark"
      >
        large
      </span>
    </label>
  </div>
</div>
`;
